#90: clean CsvSequentialReader.java